src/objects/Pricebook2.object
<CustomObject>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Price Books</relationshipLabel>
        <relationshipName>Price_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public_Display_Instructions__c</fullName>
        <label>Public Display Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Public_Display_Name__c</fullName>
        <label>Public Display Name</label>
        <length>37</length>
        <type>Text</type>
    </fields>
    <sharingModel>ReadSelect</sharingModel>
</CustomObject>